tests/fixtures/invalid/max_float.py
# Cannot call max() with Float
x = max(1.0)
